temp jquery experiment

--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.0.0/dist/phaser.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
-    <script src='./javascript.js'></script>
+  <script src='./javascript.js'></script>
+  <div id="courtRoom">
+    <div id="questionCount"></div>
+
+    <div id="jurors">
+      <div id="juror1"></div>
+      <div id="juror2"></div>
+      <div id="juror3"></div>
+      <div id="juror4"></div>
+      <div id="juror5"></div>
+      <div id="juror6"></div>
+      <div id="juror7"></div>
+      <div id="juror8"></div>
+      <div id="juror9"></div>
+      <div id="juror10"></div>
+      <div id="juror11"></div>
+      <div id="juror12"></div>
+    </div>
+  </div>
 </body>
 </html>
